<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2016. Spiracle Studios. All Rights Reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:orientation="vertical"
			  android:padding="24dp"
			  tools:context="activities.MainActivity">

	<CheckBox
		android:id="@+id/questions_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_margin="6dp"
		android:checked="true"
		android:text="@string/questions" />

	<CheckBox
		android:id="@+id/road_signs_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_margin="6dp"
		android:checked="true"
		android:text="@string/road_signs" />

	<CheckBox
		android:id="@+id/intersections_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_margin="6dp"
		android:checked="true"
		android:text="@string/intersections" />

	<!-- Divider -->
	<View
		android:id="@+id/divider"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginBottom="16dp"
		android:layout_marginTop="16dp"
		android:background="?attr/colorDividers" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_test_options_intersections_not_yet_available"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:textColor="#03A9F4"
			android:textSize="16sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="26dp"
			android:gravity="center"
			android:text="@string/dialog_test_options_intersections_not_yet_available_desc"
			android:textColor="?attr/colorSecondaryText" />

		<TextView
			android:id="@+id/purchase_premium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="26dp"
			android:gravity="center"
			android:text="@string/dialog_test_options_intersections_not_yet_available_buy"
			android:textColor="?attr/colorAccent" />

	</LinearLayout>

</LinearLayout>
