<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2016. Spiracle Studios. All Rights Reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@color/indigo_A700"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  android:theme="@style/IntroSlide">

	<com.devspark.robototextview.widget.RobotoTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp"
		android:fontFamily="sans-serif-light"
		android:gravity="center_horizontal"
		android:text="@string/intro_subscribe_title"
		android:textColor="@android:color/white"
		android:textSize="48sp"
		app:typeface="roboto_light" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.devspark.robototextview.widget.RobotoTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="28dp"
				android:fontFamily="sans-serif-light"
				android:gravity="center_horizontal"
				android:text="@string/intro_subscribe_subtitle"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				app:typeface="roboto_light" />

			<EditText
				android:id="@+id/email_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_email_address"
				android:inputType="textEmailAddress"
				android:theme="@style/MyTheme.Dark" />

			<EditText
				android:id="@+id/first_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_first_name"
				android:inputType="textPersonName|textCapWords"
				android:theme="@style/MyTheme.Dark" />

			<EditText
				android:id="@+id/last_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_last_name"
				android:inputType="textPersonName|textCapWords"
				android:theme="@style/MyTheme.Dark" />

			<Button
				android:id="@+id/subscribe"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:radius="10dp"
				android:layout_marginTop="12dp"
				android:theme="@style/IntroSlideActionButton"
				android:text="@string/intro_subscribe_subscribe" />

			<TextView
				android:id="@+id/connectivity_error"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="6dp"
				android:gravity="center_horizontal"
				android:text="@string/error_connect_to_the_internet"
				android:textColor="#F44336"
				android:textSize="15sp"
				android:visibility="visible" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>