<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activities.InformationActivity"
    tools:showIn="@layout/information__app_bar"
    >

  <android.support.v7.widget.CardView style="@style/PaperSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/content_padding"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:text="@string/app_name"
          android:textAppearance="@style/TextAppearance.Content_Category_Header"
          />

      <TextView
          android:id="@+id/app_version"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginLeft="@dimen/content_padding_small"
          android:text="@string/information__string__version"
          android:textAppearance="@style/TextAppearance.Content_Category_Header_AdditionalInfo"
          />

    </LinearLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
      android:layout_marginTop="@dimen/content_padding_small"
      style="@style/PaperSheet"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/content_padding_small"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/company__name"
            android:textAppearance="@style/TextAppearance.Content_Category_Header"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/content_padding_small"
            android:text="@string/company__copyright_year"
            android:textAppearance="@style/TextAppearance.Content_Category_Header_AdditionalInfo"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/content_padding_small"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/information__string__email"
            android:textAppearance="@style/TextAppearance.Content_Pair_Key"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/company__email"
            android:textAppearance="@style/TextAppearance.Content_Pair_Value"
            android:textIsSelectable="true"
            />

      </LinearLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>

  <LinearLayout
      android:id="@+id/social_networks"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/content_padding_small"
      android:gravity="center"
      android:orientation="horizontal"
      >

    <ImageButton
        android:id="@+id/web_link"
        android:contentDescription="@string/cd__social__web"
        app:srcCompat="@drawable/ic_social_web"
        style="@style/SocialIcon"
        />

    <ImageButton
        android:id="@+id/facebook_link"
        android:contentDescription="@string/cd__social__facebook"
        app:srcCompat="@drawable/ic_social_facebook"
        style="@style/SocialIcon"
        />

    <!--<ImageButton
        android:id="@+id/twitter_link"
        android:contentDescription="@string/cd__social__twitter"
        app:srcCompat="@drawable/ic_social_twitter"
        style="@style/SocialIcon"
        />-->

    <!--<ImageButton
        android:id="@+id/youtube_link"
        android:contentDescription="@string/cd__social__youtube"
        app:srcCompat="@drawable/ic_social_youtube"
        style="@style/SocialIcon"
        />-->

    <ImageButton
        android:id="@+id/google_play_link"
        android:contentDescription="@string/cd__social__google_play"
        app:srcCompat="@drawable/ic_social_google"
        style="@style/SocialIcon"
        />

  </LinearLayout>
</LinearLayout>