<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015-2017. Spiracle Studios. All Rights Reserved.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper"
    android:fitsSystemWindows="true"
    style="@style/CoordinatorLayout"
    >

  <LinearLayout
      android:id="@+id/top_level_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <include layout="@layout/test__app_bar"/>

    <LinearLayout
        android:id="@+id/intersection_car_position_notice"
        android:visibility="gone"
        style="@style/IntersectionCarPositionNotice"
        >

      <TextView
          android:text="@string/your_car_is_always_at_the_bottom"
          style="@style/IntersectionCarPositionNoticeText"
          />

      <ImageButton
          android:id="@+id/intersection_car_position_notice_close"
          style="@style/IntersectionCarPositionNoticeClose"
          />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

      <include
          layout="@layout/partial_question_container"
          android:id="@+id/question_container"
          />

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="@string/ad_size"
        ads:adUnitId="@string/banner_ad_unit_id"
        />

  </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
