<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2016. Spiracle Studios. All Rights Reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@color/blue_600"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin">

	<com.devspark.robototextview.widget.RobotoTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginTop="8dp"
		android:fontFamily="sans-serif-light"
		android:gravity="center_horizontal"
		android:text="@string/intro_about_you_title"
		android:textColor="@android:color/white"
		android:textSize="48sp"
		app:typeface="roboto_light" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.devspark.robototextview.widget.RobotoTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="28dp"
				android:fontFamily="sans-serif-light"
				android:gravity="center_horizontal"
				android:text="@string/intro_about_you_subtitle"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				app:typeface="roboto_light" />

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start|center_vertical"
					android:layout_marginRight="16dp"
					android:text="@string/intro_about_you_gender"
					android:textColor="@android:color/white"
					android:textSize="16sp" />

				<Spinner
					android:id="@+id/gender"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:entries="@array/intro_about_you_genders_array"
					android:gravity="end"
					android:textColor="#ffffff"
					android:theme="@style/MyTheme.Dark"
					tools:listitem="@layout/preview_spinner_gender" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="16dp"
					android:text="@string/intro_about_you_birth_year"
					android:textColor="@android:color/white"
					android:textSize="16sp" />

				<EditText
					android:id="@+id/birth_year"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:hint="@string/hint_dont_provide"
					android:inputType="number"
					android:gravity="end"
					android:maxLength="4"
					android:textSize="16sp"
					android:theme="@style/MyTheme.Dark" />

			</LinearLayout>

			<Button
				android:id="@+id/save"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="16dp"
				android:text="@string/intro_about_you_save"
				android:theme="@style/IntroSlideActionButton.Light" />

		</LinearLayout>

	</ScrollView>

</LinearLayout>